:heavy_check_mark: Сборка #2

--- a/2/index.html
+++ b/2/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <script src="../main.js"></script>
+  <script src="./main.js"></script>
   <title>Кекстаграм</title>
   <base href="https://htmlacademy-javascript.github.io/1700741-kekstagram-simple-27/2/">
 </head>
