:heavy_check_mark: Сборка #9

--- a/9/index.html
+++ b/9/index.html
@@ -111,8 +111,7 @@
                      data-pristine-required-message="Обязательное поле"
                      data-pristine-minlength-message="Минимальная длина 20 символов"
                      data-pristine-maxlength-message="Максимальная длина 140 символов">
-
-                    ></textarea>
+                    </textarea>
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
@@ -172,6 +171,7 @@
     </section>
   </template>
 
+  <script src="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
   <script src="pristine/prictine.js"></script>
   <script src="js/main.js" type="module"></script>
 </body>
